aau/sf_autobackup/objects/Bus_Stops_Routes_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <label>Bus Route</label>
        <referenceTo>Bus_Route__c</referenceTo>
        <relationshipLabel>Bus Stops Routes Staging</relationshipLabel>
        <relationshipName>Bus_Stops_Routes_Staging</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <label>Bus Stop</label>
        <referenceTo>Bus_Stop__c</referenceTo>
        <relationshipLabel>Bus Stops Routes Staging</relationshipLabel>
        <relationshipName>Bus_Stops_Routes_Staging</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stop_Order__c</fullName>
        <label>Stop Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bus Stops Routes Staging</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bus Stops Routes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Stops Routes Staging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>